# common_ros2_interfaces

./: pixi.toml
perceive_semantix_interfaces/: CMakeLists.txt  README.md  package.xml  pixi.toml
perceive_semantix_interfaces/msg/: ObjectDetection.msg  ObjectDetectionArray.msg
perceive_semantix_interfaces/srv/: EnableHeatmap.srv  SetMapPose.srv
